clusters/eldertree/swimto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swimto
  labels:
    name: swimto
    app: swimto
